# PerceptLibrary

./: .gitignore  CMakeLists.txt  CMakeLists.txt.old  CMakeListsExampleForUseLibraryInYourProjetc.txt  LICENSE.txt  README.md
.git-rewrite/: backup-refs  parse  revs
buildLib/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  RobotLabLibrary.sln  RobotLabLibrary.vcxproj  RobotLabLibrary.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  createFaceDatabase.vcxproj  createFaceDatabase.vcxproj.filters  faceRecognition.vcxproj  faceRecognition.vcxproj.filters  globalSample.vcxproj  globalSample.vcxproj.filters  videoDetection.vcxproj  videoDetection.vcxproj.filters  voiceAndDetection.vcxproj  voiceAndDetection.vcxproj.filters  voiceRecognition.vcxproj  voiceRecognition.vcxproj.filters
cmake/Modules/: FindSphinxBase.cmake
data/: create_csv.py
data/dataForRec/: customDatabaseCsvTest.txt  customFaceCsv.txt  customFaceCsvCopy.txt
data/dataForRec/customDatabase/: adrien.pgm
data/modelPocketSphinx/roboticModel/: roboticOrder.dic  roboticOrder.lm  roboticOrder.txt
data/modelPocketSphinx/roboticModel/fr-fr/: feat.params
include/: Constantes.h  Recognizer.h  Voice.h
linux/RobotLabLibrary/: Constantes.h  Makefile  RobotLabLibrary  Video.cpp  Video.cpp.orig  Video.h  main.cpp
linux/RobotLabLibrary/RobotLabLibrary/: Makefile  RobotLabLibrary
linux/RobotLabLibrary/RobotLabLibrary/include/: Constantes.h  Recognizer.h  Voice.h
linux/RobotLabLibrary/RobotLabLibrary/src/: Recognizer.cpp  Video.cpp
samples/: CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  createFaceDatabase.cpp  faceRecognition.vcxproj  globalSample.cpp  sampleProject.sln  videoDetection.cpp  videoDetection.vcxproj  videoDetection.vcxproj.filters  voiceAndDetection.cpp  voiceRecognition.cpp
src/: Recognizer.cpp  Video.cpp  Voice.cpp
windows/RobotLabLibrary/: RobotLabLibrary.sln
windows/RobotLabLibrary/Debug/: RobotLabLibrary.ilk
windows/RobotLabLibrary/RobotLabLibrary/: Constantes.h  Recognizer.cpp  Recognizer.h  RobotLabLibrary.vcxproj  RobotLabLibrary.vcxproj.filters  RobotLabLibrary.vcxproj.orig  Video.cpp  Video.cpp.orig  Video.h  Voice.cpp  Voice.h  main.cpp  main.cpp.orig
windows/RobotLabLibrary/RobotLabLibrary/Debug/: vc120.idb
windows/RobotLabLibrary/RobotLabLibrary/Debug/RobotLabLibrary.tlog/: CL.read.1.tlog  CL.write.1.tlog  RobotLabLibrary.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
windows/RobotLabLibrary/RobotLabLibrary/faceRecognizerContrib/include/: face.hpp
windows/RobotLabLibrary/RobotLabLibrary/faceRecognizerContrib/src/: face_basic.hpp  facerec.cpp  lbph_faces.cpp  precomp.hpp
windows/RobotLabLibrary/RobotLabLibrary/include/: Constantes.h  Recognizer.h  Video.h  Voice.h  Voice.h.orig  faceCsv.txt
windows/RobotLabLibrary/RobotLabLibrary/src/: Recognizer.cpp  Video.cpp  Voice.cpp  faceCsv.txt
